@@ -3,7 +3,6 @@ package cc.backend.amateurShow.service.amateurShowService;
 import cc.backend.amateurShow.dto.AmateurShowResponseDTO;
 import cc.backend.amateurShow.dto.AmateurUpdateRequestDTO;
 import cc.backend.amateurShow.entity.*;
-import cc.backend.amateurShow.entity.enums.ApprovalStatus;
 import cc.backend.amateurShow.repository.*;
 import cc.backend.amateurShow.converter.AmateurConverter;
 import cc.backend.amateurShow.dto.AmateurEnrollRequestDTO;
@@ -11,10 +10,7 @@ import cc.backend.amateurShow.dto.AmateurEnrollResponseDTO;
 import cc.backend.amateurShow.repository.specification.AmateurShowSpecification;
 import cc.backend.apiPayLoad.code.status.ErrorStatus;
 import cc.backend.apiPayLoad.exception.GeneralException;
-import cc.backend.board.entity.enums.BoardType;
-import cc.backend.event.entity.NewShowEvent;
 import cc.backend.image.DTO.ImageRequestDTO;
-import cc.backend.image.DTO.ImageResponseDTO;
 import cc.backend.image.FilePath;
 import cc.backend.image.entity.Image;
 import cc.backend.image.repository.ImageRepository;
@@ -22,20 +18,17 @@ import cc.backend.image.service.ImageService;
 import cc.backend.member.entity.Member;
 import cc.backend.member.enumerate.Role;
 import cc.backend.member.repository.MemberRepository;
-import cc.backend.memberLike.entity.MemberLike;
 import cc.backend.memberLike.repository.MemberLikeRepository;
-import cc.backend.ticket.dto.response.ReserveListResponseDTO;
+import cc.backend.notice.event.entity.NewShowEvent;
+import cc.backend.notice.kafka.NewShowEvent.MemberRecommendationProducer;
+import cc.backend.notice.service.NoticeService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
-import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.text.Collator;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -54,7 +47,8 @@ public class AmateurServiceImpl implements AmateurService {
     private final MemberLikeRepository memberLikeRepository;
     private final ImageService imageService;
     private final ImageRepository imageRepository;
-    private final ApplicationEventPublisher eventPublisher; //이벤트 생성
+    private final NoticeService noticeService;
+    private final MemberRecommendationProducer memberRecommendationProducer;
 
     // 소극장 공연 등록
     @Transactional
@@ -93,16 +87,22 @@ public class AmateurServiceImpl implements AmateurService {
         imageService.saveImageWithImageUrl(memberId, fullImageRequestDTO, Optional.ofNullable(dto.getImageUrl()));
 
 
-        // 좋아요한 멤버리스트
-        List<MemberLike> memberLikers = memberLikeRepository.findByPerformerId(memberId);
-        // 좋아요한 멤버가 한 명 이상일 때만
-        if(!memberLikers.isEmpty()) {
-            List<Member> likers = memberLikers.stream()
-                    .map(MemberLike::getLiker)
-                    .collect(Collectors.toList());
+        //좋아요한 멤버 추출
+        List<Long> likerIds = memberLikeRepository.findByPerformerId(memberId)
+                .stream()
+                .map(l -> l.getLiker().getId())
+                .toList();
 
-            eventPublisher.publishEvent(new NewShowEvent(newAmateurShow.getId(), memberId, likers));   //공연등록 이벤트 생성
+        // 좋아요 알림: 좋아요한 멤버들만
+        if (!likerIds.isEmpty()) {
+            noticeService.notifyNewShow(
+                    new NewShowEvent(newAmateurShow.getId(), memberId, likerIds)
+            );
         }
+        // 추천: 해시태그 기반 추천 → 모든 회원 대상
+        memberRecommendationProducer.recommendByHashtag(
+                new NewShowEvent(newAmateurShow.getId(), memberId, null)
+        );
 
         // response
         return AmateurConverter.toAmateurEnrollDTO(newAmateurShow);
